Implementação inicial JWT (WIP)

--- a/.env.example
+++ b/.env.example
@@ -4,9 +4,10 @@ APP_DEBUG=true
 DEBUGBAR=true
 APP_SECURE=false
 EMAIL_NOTIFICATIONS=true
-
 APP_DOMAIN=laravel.app
 APP_URL=http://laravel.app
+
+JWT_SECRET=
 
 DB_HOST=localhost
 DB_DATABASE=laravel
