--- a/composer.json
+++ b/composer.json
@@ -9,16 +9,17 @@
   "type": "project",
   "minimum-stability": "dev",
   "prefer-stable": true,
+  "optimize-autoloader": true,
   "require": {
     "php": ">=5.6.4",
-    "laravel/framework": "5.3.*",
-    "laravelcollective/html": "5.3.*",
+    "laravel/framework": "5.4.*",
+    "laravel/tinker": "^1.0",
+    "laravelcollective/html": "5.4.*",
     "barryvdh/laravel-ide-helper": "^2.1",
-    "artesaos/defender": "^0.6.2",
     "cviebrock/eloquent-sluggable": "^4.1.1",
     "owen-it/laravel-auditing": "^2.0",
     "doctrine/dbal": "^2.5",
-    "guzzlehttp/guzzle": "~5.0",
+    "guzzlehttp/guzzle": "~6.0",
     "artesaos/warehouse": "3.0.*",
     "artesaos/migrator": "^1.2",
     "fraterblack/attacher": "dev-master",
@@ -28,12 +29,7 @@
   "require-dev": {
     "fzaninotto/faker": "~1.4",
     "mockery/mockery": "0.9.*",
-    "phpunit/phpunit": "~5.0",
-    "symfony/css-selector": "3.1.*",
-    "symfony/dom-crawler": "3.1.*",
-    "phpspec/phpspec": "~2.1",
-    "laracasts/generators": "^1.1",
-    "laracasts/testdummy": "^2.3"
+    "phpunit/phpunit": "~5.7"
   },
   "autoload": {
     "psr-4": {
